--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 application.title=Bank account Yassine LAMBARKI
 application.version=1.0
+spring.graphql.graphiql.enabled=true
