--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.h2.console.path=/h2
 application.title=Bank account Yassine LAMBARKI
 application.version=1.0
 spring.graphql.graphiql.enabled=true
+#server.error.include-message=always
+#server.error.include-binding-errors=always
+#server.error.include-stacktrace=always
